wave 1, mostly dependency wrangling and auto-convertable